update track.